	- Nigerian Foreign Investments and Neighborly Expansion should no longer scope to Nigeria
	- Removed reference to a vanilla event from LAR
	- Patched economic cycle events. Negative events should now be much more likely to occur
	- Patched internal faction The Bazaar immediately plummeting to 0 when taking any kind of opinion option

Content:
	- Added option to Stock Market Crash to "bailout" to give you a player option
	- More factions dislike when the Stock Market Crash
	- Added Ukrainian Event to cooldown the 2001 protests
	- Added German ship names
	- Rebalanced some Nigerian focuses
	- Syrian Civil War named threat is now 5 tension rather than 2 allowing for volunteers
	- Cut the PKK system (System for Turkey needs to be completely reworked)

Database:
	- Added AA Upgrade 3 to Russia
	- Removed minors from on start up SAM sites and SAM tech (including HLS & SMA)
	- Officer rework for MIC, MLC, MLD, MLT, MLW
	- Added Early Helicopter to Nigeria
	- Updated Israeli Aircraft Names
	- Updated Isreali starting Techs
	- Removed some UAE starting Techs

Focus Tree:
	- Revealed hidden North Korean tree branches
	- Reduced negative modifiers from Arduous March so you can actually research something (in 8000 days :kek:)

Graphics:
	- Updated Investment System Icons to new building icons

Localization:
	- Fixed a typo in alert button
	- Fixed a typo in Trajectory Tooltip
	- Updated localization for Investment System
	- Fixed grammar and spelling for the print money tooltip
	- Fixed type in Eau Claire, WI
	- Fixed typo in Turkish city

OOBs:
	- Fixed FREMM-FR class not having VLS

Performance:
	- Optimised Syria's events
	- Additional optimization to event runs

Military:
	- Removed Power Projection mechanic
	- Strike Fighter now are fighter cas tactical_bomber scout_plane
	- Multi Role Fighter now are fighter interceptor cas tactical_bomber scout_plane
	- CV Multi Role Fighter now are fighter interceptor cas tactical_bomber naval_bomber