@@ -319,11 +319,39 @@ on_actions = {
 
 	on_nuke_drop = {
 		effect = {
+			### for testing
+			# THIS = {
+			# 	country_event = {
+			# 		id = nukes.4 #file: missiles_events.txt
+			# 		hours = 4
+			# 	}
+			# }
+			#
 			FROM = {
 				controller = {
-					country_event = {
-						id = nukes.2 #file: missiles_events.txt
-						hours = 4
+					if = {
+						limit = {
+							NOT = { original_tag = PREV.PREV }
+						}
+						country_event = {
+							id = nukes.2 #file: missiles_events.txt
+							hours = 4
+						}
+					}
+					else_if = {
+						limit = {
+							original_tag = PREV.PREV
+						}
+						every_country = {
+							limit = {
+								NOT = { is_ai = yes }
+								NOT = { has_country_flag = NOT_show_nuclare_test_info }
+							}
+							country_event = {
+								id = nukes.4 #file: missiles_events.txt
+								hours = 4
+							}
+						}
 					}
 				}
 			}
