@@ -4056,88 +4056,90 @@ scripted_gui = {
 					limit = {
 						check_variable = { var_gui_nuke = 2 }
 					}
-					custom_trigger_tooltip = {
-						tooltip = strike_limit_TT
-						set_temp_variable = { temp2 = ROOT.var_total_firing }
-						multiply_temp_variable  = { temp2 = ROOT.var_gui_MIRV }
-						set_temp_variable = { temp3 = ROOT.var_strike_limit }
-						OR = {
-							check_variable = { temp3 > temp2 }
-							check_variable = { temp3 = temp2 }
-						}
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 0
-							}
-						}
-						var:var_target_TAG = { ROOT = { use_condition_NFU = yes } }
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 1
-							}
-						}
-						var:var_target_TAG = { ROOT = { use_condition_MAD = yes } }
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 2
-							}
-						}
-						var:var_target_TAG = { ROOT = { use_condition_MASSR = yes } }
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 3
-							}
-						}
-						var:var_target_TAG = { ROOT = { use_condition_FXRSP = yes } }
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 4
-							}
-						}
-						var:var_target_TAG = { ROOT = { use_condition_PRMTR_gui = yes } }
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 5
-							}
-						}
-						var:var_target_TAG = { ROOT = { use_condition_NDESC_gui = yes } }
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 6
-							}
-						}
-						var:var_target_TAG = { ROOT = { use_condition_FSTK = yes } }
-					}
-					if = {
-						limit = {
-							is_in_array = {
-								array = nuclear_doctrine_array
-								value = 7
-							}
-						}
-						#var:var_target_TAG = { ROOT = { use_condition_MASSR = yes } }
-					}
+					nuclear_strike_allowed_gui = yes
+					### 1.6.0 code, bugged?
+					# custom_trigger_tooltip = {
+					# 	tooltip = strike_limit_TT
+					# 	set_temp_variable = { temp2 = ROOT.var_total_firing }
+					# 	multiply_temp_variable  = { temp2 = ROOT.var_gui_MIRV }
+					# 	set_temp_variable = { temp3 = ROOT.var_strike_limit }
+					# 	OR = {
+					# 		check_variable = { temp3 > temp2 }
+					# 		check_variable = { temp3 = temp2 }
+					# 	}
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 0
+					# 		}
+					# 	}
+					# 	var:var_target_TAG = { ROOT = { use_condition_NFU = yes } }
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 1
+					# 		}
+					# 	}
+					# 	var:var_target_TAG = { ROOT = { use_condition_MAD = yes } }
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 2
+					# 		}
+					# 	}
+					# 	var:var_target_TAG = { ROOT = { use_condition_MASSR = yes } }
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 3
+					# 		}
+					# 	}
+					# 	var:var_target_TAG = { ROOT = { use_condition_FXRSP = yes } }
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 4
+					# 		}
+					# 	}
+					# 	var:var_target_TAG = { ROOT = { use_condition_PRMTR_gui = yes } }
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 5
+					# 		}
+					# 	}
+					# 	var:var_target_TAG = { ROOT = { use_condition_NDESC_gui = yes } }
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 6
+					# 		}
+					# 	}
+					# 	var:var_target_TAG = { ROOT = { use_condition_FSTK = yes } }
+					# }
+					# if = {
+					# 	limit = {
+					# 		is_in_array = {
+					# 			array = nuclear_doctrine_array
+					# 			value = 7
+					# 		}
+					# 	}
+					# 	#var:var_target_TAG = { ROOT = { use_condition_MASSR = yes } }
+					# }
 				}
 				# if = {
 				# 	limit = {
