@@ -1115,6 +1115,108 @@ alert_conditions = {
 	}
 }
 
+##########################################
+### check nuclear doctrines for launch ###
+##########################################
+
+nuclear_strike_allowed_gui = {
+	if = {
+		limit = {
+			var:var_target_TAG = { NOT = { original_tag = ROOT } }
+		}
+		custom_trigger_tooltip = {
+			tooltip = strike_limit_TT
+			set_temp_variable = { temp2 = ROOT.var_total_firing }
+			multiply_temp_variable  = { temp2 = ROOT.var_gui_MIRV }
+			set_temp_variable = { temp3 = ROOT.var_strike_limit }
+			OR = {
+				check_variable = { temp3 > temp2 }
+				check_variable = { temp3 = temp2 }
+			}
+		}
+		OR = {
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 0
+					}
+				}
+				var:var_target_TAG = { ROOT = { use_condition_NFU = yes } }
+			}
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 1
+					}
+				}
+				var:var_target_TAG = { ROOT = { use_condition_MAD = yes } }
+			}
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 2
+					}
+				}
+				var:var_target_TAG = { ROOT = { use_condition_MASSR = yes } }
+			}
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 3
+					}
+				}
+				var:var_target_TAG = { ROOT = { use_condition_FXRSP = yes } }
+			}
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 4
+					}
+				}
+				var:var_target_TAG = { ROOT = { use_condition_PRMTR_gui = yes } }
+			}
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 5
+					}
+				}
+				var:var_target_TAG = { ROOT = { use_condition_NDESC_gui = yes } }
+			}
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 6
+					}
+				}
+				var:var_target_TAG = { ROOT = { use_condition_FSTK = yes } }
+			}
+			if = {
+				limit = {
+					is_in_array = {
+						array = nuclear_doctrine_array
+						value = 7
+					}
+				}
+				#var:var_target_TAG = { ROOT = { use_condition_MASSR = yes } }
+			}
+		}
+	}
+	else_if = {
+		has_NTEST = yes
+		NOT_has_NTB = yes
+	}
+}
+
+
+
 #############################
 ### launch point triggers ###
 #############################
@@ -1933,6 +2035,13 @@ has_NPOWER_OR_SPOWER = {
 			is_in_array = { nuclear_status_array = 3 }
 			is_in_array = { nuclear_status_array = 6 }
 		}
+	}
+}
+
+has_NTEST = {
+	custom_trigger_tooltip = {
+		tooltip = has_NTEST_TT
+		is_in_array = { nuclear_status_array = 8 }
 	}
 }
 
