@@ -222,3 +222,29 @@ country_event = {
 
 	}
 }
+
+country_event = {
+	id = nukes.4
+	title = nukes.4.t
+	desc = nukes.4.d
+
+	picture = GFX_rocket_explosion
+
+	is_triggered_only = yes
+
+	option = { #a yes
+		name = nukes.4.a
+		log = "[GetDateText]: [Root.GetName]: event nukes.4.a"
+		
+
+		ai_chance = {
+			factor = 1
+		}
+	}
+	option = { #b no
+	name = nukes.4.b
+	log = "[GetDateText]: [Root.GetName]: event nukes.4.b"
+		set_country_flag = NOT_show_nuclare_test_info
+	}
+
+}
