@@ -9907,6 +9907,7 @@ guiTypes = {
 			font = "hoi_16mbs"
 			borderSize = {x = 0 y = 0 }
 			text = "NUCLEAR_STRIKE_LIMIT"
+			pdx_tooltip = "NUCLEAR_STRIKE_LIMIT_TT"
 			maxWidth = 300
 			maxHeight = 20
 			format = left
@@ -10270,6 +10271,7 @@ guiTypes = {
 			font = "hoi_16mbs"
 			borderSize = {x = 0 y = 0 }
 			text = "NUCLEAR_STRIKE_LIMIT_SELECTION"
+			pdx_tooltip = "NUCLEAR_STRIKE_LIMIT_TT"
 			maxWidth = 300
 			maxHeight = 20
 			format = left
