@@ -1443,6 +1443,7 @@ NOT_has_THIS_nuclear_status_TT: "NOT has this §Ynuclear status§!."
 
 has_NPOWER_TT: "§Y[THIS.GetNameWithFlag]§! has §gnuclear status§! §Y$nuclear_status_3_loc_key$§!."
 has_NPOWER_OR_SPOWER_TT: "§Y[THIS.GetNameWithFlag]§! has §gnuclear status§! §Y$nuclear_status_3_loc_key$§! or §Y$nuclear_status_6_loc_key$§!."
+has_NTEST_TT: "§Y[THIS.GetNameWithFlag]§! has §gnuclear status§! §Y$nuclear_status_8_loc_key$§!."
 NOT_has_NTEST_TT: "§Y[THIS.GetNameWithFlag]§! does not have §gnuclear status§! §Y$nuclear_status_8_loc_key$§!."
 NOT_has_NPOWER_OR_SPROG_TT: "§Y[THIS.GetNameWithFlag]§! does not have §gnuclear status§! §Y$nuclear_status_3_loc_key$§! or §Y$nuclear_status_7_loc_key$§!."
 NOT_has_SPOWER_OR_SPROG_TT: "§Y[THIS.GetNameWithFlag]§! does not have §gnuclear status§! §Y$nuclear_status_6_loc_key$§! or §Y$nuclear_status_7_loc_key$§!."
@@ -1510,6 +1511,7 @@ NUCLEAR_ACTION_1: "Alert"
 NUCLEAR_ACTION_2: "First Strike"
 NUCLEAR_ACTION_3: "Retaliatory Strike"
 NUCLEAR_STRIKE_LIMIT: "Strike Limit:  §O[strike_limit_loc]§!"
+NUCLEAR_STRIKE_LIMIT_TT: "§YStike Limit§! for each doctrine will be reset every §Y90 days§!."
 NUCLEAR_STRIKE_LIMIT_SELECTION: "Strike Limit:  §O[strike_limit_selection_loc]§!"
 NUCLEAR_STRIKE_CONDITION: "Use Condition:\n[use_condition_loc]"
 NUCLEAR_STRIKE_CONDITION_SELECTION: "Use Condition:\n[use_condition_selection_loc]"
