@@ -749,6 +749,11 @@
  nukes.3.a: "Fire!"
  nukes.3.b: "Back down!"
 
+ nukes.4.t: "[FROM.GetAdjective] Nuclear Test"
+ nukes.4.d: "[FROM.GetName] has tested a nuclear warhead."
+ nukes.4.a: "Okay!"
+ nukes.4.b: "Don't inform me on nuclear tests again!"
+
 #########################
 ### MISSILE MAP MODES ###
 #########################
