@@ -65,6 +65,8 @@ Bugfixes:
 	- Removed reference to a vanilla event from LAR
 	- Patched economic cycle events. Negative events should now be much more likely to occur
 	- Patched internal faction The Bazaar immediately plummeting to 0 when taking any kind of opinion option
+	- Fixed nuclear doctrine triggers for fire button not working correctly
+	- Fixed nuclear test not working correctly
 
 Content:
 	- Added option to Stock Market Crash to "bailout" to give you a player option
